# attendansee

./: .env.docker  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini
backend/attendance/: README.md  admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/attendance/docs/: ADMIN_PANEL_GUIDE.md  API_DOCUMENTATION.md  API_IMPLEMENTATION_SUMMARY.md  API_QUICK_REFERENCE.md  DATABASE_SCHEMA.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NEW_ENDPOINTS_QUICK_REFERENCE.md  NEW_ENDPOINTS_SUMMARY.md  QUICK_REFERENCE.md
backend/attendance/migrations/: 0001_initial.py  0002_alter_facecrop_crop_image_path_and_more.py  (+5 more)
backend/attendansee_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/authentication/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py
backend/docs/: ADMIN_IMPLEMENTATION_SUMMARY.md  ADMIN_QUICK_REFERENCE.md  DEBUG_SUBPROCESS_EMBEDDING.md  EMBEDDING_DOUBLE_FREE_FIX.md  EMBEDDING_FIX_TESTING.md  EMBEDDING_FRONTEND_INTEGRATION.md  EMBEDDING_GENERATION_API.md  EMBEDDING_GENERATION_FEATURE.md  EMBEDDING_QUICK_START.md  EMBEDDING_SERVICE_COMPARISON.md  EMBEDDING_SERVICE_QUICK_START.md  EMBEDDING_SERVICE_REWRITE.md  EMBEDDING_SERVICE_SUMMARY.md  FACE_CROPS_SESSION_VIEW.md  FACE_DETECTION_IMPLEMENTATION.md  FACE_EMBEDDING_CLUSTERING_ASSIGNMENT.md  FACE_EMBEDDING_QUICK_REFERENCE.md  GPU_ERROR_FIX.md  IMAGE_FIELDS_COMPLETE_FIX.md  IMAGE_UPLOAD_FIX.md  INSTALLATION_CHECKLIST.md  MEMORY_CORRUPTION_FIX.md  PGVECTOR_TEST_FIX.md  POOL_ALLOCATOR_FIX.md  QUICK_START.md  QUICK_TEST_SUBPROCESS_FIX.md  STUDENT_MERGE_FEATURE.md  SUBPROCESS_EMBEDDING_FIX.md  TEST_FIXES.md
(+107 files in other folders)
